default/objects/Travel_Approval__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Travel Approvals</relationshipLabel>
    <relationshipName>Travel_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>