default/objects/Travel_Approval__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee_Detail__c</referenceTo>
    <relationshipLabel>Travel Approvals</relationshipLabel>
    <relationshipName>Travel_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>