default/objects/Travel_Approval__c/validationRules/Correct_Dep_alloted_to_Emp.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Dep_alloted_to_Emp</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (
ISBLANK(Employee_Name__r.Department__c) ||
ISBLANK(Employee_Name__r.Department__r.Name) ||
Employee_Name__r.Department__c &lt;&gt; Department__c
)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Please Enter Correct Department for employee</errorMessage>
</ValidationRule>