default/objects/Travel_Approval__c/validationRules/employeee_department_correction.validationRule-meta.xml
<ValidationRule>
    <fullName>employeee_department_correction</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
(  Department__r.Name &lt;&gt; Employee_Name__r.Department__c  )</errorConditionFormula>
    <errorDisplayField>Employee_Name__c</errorDisplayField>
    <errorMessage>Employee Department Mismatch</errorMessage>
</ValidationRule>